--- a/index.html
+++ b/index.html
@@ -16,20 +16,25 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
-					<h1 class="text-center well">bbbbbbb</h1>
+					<h1 class="text-center well">Haz 10</h1>
 					<hr>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6">
 					<div class="form-group">
-					 	<label class="well" for="number1">Ingresa un número:</label>
-					 	<input type="email" class="form-control" id="number1" placeholder="0">
+					 	<label class="well" for="numberA">Ingresa un número:</label>
+					 	<input type="email" class="form-control" id="numberA" placeholder="0">
+					</div>
+					<hr>
+					<div class="form-group">
+						<label class="well" for="numberB">Ingresa otro número:</label>
+					 	<input type="email" class="form-control" id="numberB" placeholder="0">
 					</div>
 				</div>
 				<div class="col-md-6">
 					<div class="form-group">
-						<label class="well" for="mayor">¿El número ingresado es mayor que 21?</label>
+						<label class="well" for="mayor">¿Alguno de los números ingresados son negativo?</label>
 						<select class="form-control" id="mayor">
 							<option value="1">Si</option>
 							<option value="2">No</option>
